# thesis-genius

./: .gitignore  Dockerfile  Makefile  README.md  dump.rdb  package-lock.json  package.json  requirements.txt  startRedis.ps1
.github/: pull_request_template.md
backend/: .env  Dockerfile  README.md  __init__.py  pyproject.toml  requirements.txt  run.py  setup.py
backend/app/: __init__.py  app.py  config.py  routes.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/routes/: forum.py  thesis.py  user.py
backend/app/models/: __init__.py  data.py
backend/app/routes/: __init__.py  auth.py  chat.py  format.py  forum.py  status.py  thesis.py  user.py
backend/app/services/: apaservice.py  cliservice.py  dbservice.py  forumservice.py  thesisservice.py  userservice.py
backend/app/tests/: conftest.py  test_auth.py  test_config.py  test_dbservice.py  test_format.py  test_forum.py  test_redis_helper.py  test_run.py  test_status.py  test_thesis.py  test_userservice.py
backend/app/utils/: apa.py  auth.py  db.py  formatter.py  log.py  redis_helper.py
backend/cli/: db.py  main.py  user.py
backend/db/: init_db.py  schema.sql  seed.sql
client/: package-lock.json  package.json
docs/: CONTRIBUTING.md
frontend/: .env  eslint.config.js  index.html  jest.config.mjs  jest.setup.js  package-lock.json  package.json  vite.config.js
scripts/: api-user.sh  nuitka.sh  update-www-content.sh
server/: __init__.py  app.py  config.py
tests/: test_forum_api.py  test_thesis_api.py  test_user_api.py
www/: about.html  contact.html  contact.php  gitops.html  hashicorp.html  (+5 more)
(+143 files in other folders)
